basic css for skills container

--- a/oracle_interface/oracle.html
+++ b/oracle_interface/oracle.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Ancestor Oracle</title>
 </head>
 <body>
@@ -24,6 +25,7 @@
 
         <div class="skills_container">
             <section id="strike_pick">
+                <h3>Strike</h3>
                 <div id="str_mod">
                     +1 attack rolls
                     +2 damage
@@ -35,6 +37,7 @@
                 <input type="checkbox" id="strike_daily" name="strike_daily" value="strike_daily">
             </section>
             <section id="skill_pick">
+                <h3>Skill</h3>
                 <div id="skill_mod">
                     +1 skill checks
                     +1 perceptioon checks
@@ -46,6 +49,7 @@
                 <input type="checkbox" id="skill_daily" name="skill_daily" value="skill_daily">
             </section>
             <section id="cast_pick">
+                <h3>Cast</h3>
                 To damage and healing on all non-cantrip, non-duration spells:
                 <div id="cast_mod">
                     +spell level
