css to visually separate

--- a/oracle_interface/oracle.html
+++ b/oracle_interface/oracle.html
@@ -26,11 +26,11 @@
         <div class="skills_container">
             <section id="strike_pick">
                 <h3>Strike</h3>
-                <div id="str_mod">
+                <div class=mod_curse_stats id="str_mod">
                     +1 attack rolls
                     +2 damage
                 </div>
-                <div id="str_maj">
+                <div class=maj_curse_stats id="str_maj">
                     +1 attack rolls
                     +6 damage
                 </div>
@@ -38,23 +38,23 @@
             </section>
             <section id="skill_pick">
                 <h3>Skill</h3>
-                <div id="skill_mod">
+                <div class=mod_curse_stats id="skill_mod">
                     +1 skill checks
                     +1 perceptioon checks
                 </div>
-                <div id="skill_maj">
+                <div class=maj_curse_stats id="skill_maj">
                     +2 skill checks
-                    +2 perceptioon checks
+                    +2 perception checks
                 </div>
                 <input type="checkbox" id="skill_daily" name="skill_daily" value="skill_daily">
             </section>
             <section id="cast_pick">
                 <h3>Cast</h3>
                 To damage and healing on all non-cantrip, non-duration spells:
-                <div id="cast_mod">
+                <div class=mod_curse_stats id="cast_mod">
                     +spell level
                 </div>
-                <div id="cast_maj">
+                <div class=maj_curse_stats id="cast_maj">
                     +spell level + 3
                 </div>
                 <input type="checkbox" id="cast_daily" name="cast_daily" value="cast_daily">
